--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -34,3 +34,19 @@ jobs:
         with:
           name: Workana-Notification.exe
           path: main.exe
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: v1.0.0
+          release_name: "Release v1.0.0"
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: main.exe
+          asset_name: Workana-Notification.exe
+          asset_content_type: application/x-msdownload
