--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -39,6 +39,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: v1.0.0
           release_name: "Release v1.0.0"
           draft: false
